Bug 432701 - save incremental backup creates one backup on first operation then on further incremental backups it does nothing
Summary: save incremental backup creates one backup on first operation then on further...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 4.4.2
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-09 20:03 UTC by barberapali
Modified: 2021-02-09 21:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description barberapali 2021-02-09 20:03:24 UTC
SUMMARY
save incremental backup creates one backup on first save then on later save incremental backup it does not create further files like this page explains
https://docs.krita.org/en/user_manual/autosave.html#incremental-backup-files

STEPS TO REPRODUCE
1.create new file  
2.save file (1.kra)
3.save incremental backup (1~000.kra created)
4.change something (draw a stroke) and save the file
4.save incremental backup (nothing happens per the documentation 1~001.kra should be created) 

OBSERVED RESULT
only one backup is created

EXPECTED RESULT
multiple numbered backup files should be created with each operation

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Krita

 Version: 4.4.2
 Languages: en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.9
  Version (loaded): 5.12.9

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.16299
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

OpenGL Info
 
  Vendor:  "Google Inc." 
  Renderer:  "ANGLE (NVIDIA GeForce RTX 2080 Ti Direct3D11 vs_5_0 ps_5_0)" 
  Version:  "OpenGL ES 3.0 (ANGLE 2.1.0.57ea533f79a7)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0.57ea533f79a7)" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.0
     Supports deprecated functions false 
     is OpenGL ES: true 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 

Hardware Information

  GPU Acceleration: auto
  Memory: 65402 Mb
  Number of Cores: 64
  Swap Location: C:/Users/paul/AppData/Local/Temp

Current Settings

  Current Swap Location: C:/Users/paul/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Use AMD Vectorization Workaround: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 1
	Screen: 0
		Name: \\.\DISPLAY1
		Depth: 32
		Scale: 1
		Resolution in pixels: 3840x2160
		Manufacturer: 
		Model: 
		Refresh Rate: 60

Current Settings

  Current Swap Location: C:/Users/paul/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Use AMD Vectorization Workaround: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 600
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false
Comment 1 Lynx3d 2021-02-09 21:15:45 UTC
Git commit 6347f709e9d621bebbe767e24428a225bb7eba79 by Mathias Wein.
Committed on 09/02/2021 at 21:09.
Pushed by mwein into branch 'master'.

Fix saving incremental backups

The fix for BUG:421792 broke the check if a file already exists,
since "backupFileName" is not a complete path anymore.

M  +2    -2    libs/ui/KisViewManager.cpp

https://invent.kde.org/graphics/krita/commit/6347f709e9d621bebbe767e24428a225bb7eba79
Comment 2 Lynx3d 2021-02-09 21:22:42 UTC
Git commit c0196f103607deeb3926c2c99f927250d159d652 by Mathias Wein.
Committed on 09/02/2021 at 21:18.
Pushed by mwein into branch 'krita/4.3'.

Fix saving incremental backups

The fix for BUG:421792 broke the check if a file already exists,
since "backupFileName" is not a complete path anymore.
(cherry picked from commit 6347f709e9d621bebbe767e24428a225bb7eba79)

M  +2    -2    libs/ui/KisViewManager.cpp

https://invent.kde.org/graphics/krita/commit/c0196f103607deeb3926c2c99f927250d159d652