Fix saving incremental backups

The fix for BUG:421792 broke the check if a file already exists,
since "backupFileName" is not a complete path anymore.

BUG:432701
(cherry picked from commit 6347f709e9d621bebbe767e24428a225bb7eba79)